[project]
name = "cabernet"
version = "0.1.0"
description = ""
authors = [
    {name = "V.Guilherme",email = "v.guilherme.barreto@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
